--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,15 @@ cbindgen = "0.20.0"
 
 [dependencies]
 
+libc = "0.2"
+log = "0.4.11"
+bitflags = "1.3.2"
+pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core", branch="master", package = "pangocairo" }
+
+[dependencies.gtk]
+package = "gtk4"
+git = "https://github.com/gtk-rs/gtk4-rs"   
+
 [lib]
 name = "litehtmlgtk_rs"
 path = "src/lib.rs"
